--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,6 @@
 const today = new Date();
 ---
 
-<footer>
+<footer class="text-center">
 	&copy; {today.getFullYear()} William Kaiser. All rights reserved.
 </footer>
