--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,25 +1,24 @@
 ---
 import HeaderLink from './HeaderLink.astro';
-import { SITE_TITLE } from '../consts';
+import { SITE_TITLE, LINKEDIN, GITHUB } from '../consts';
 
 import { Icon } from 'astro-icon';
 ---
 
-<header class="flex justify-between items-center py-4">
-  <div class="flex space-x-2 items-center">
+<header class="sm:flex justify-between items-center py-4">
+  <div class="md:flex md:space-x-2 items-center">
     <h2 class="text-lg font-bold">
       <a href="/">{SITE_TITLE}</a>
     </h2>
-    <nav class="text-md space-x-2">
-      <HeaderLink href="/">Home</HeaderLink>
+    <nav class="text-md md:space-x-2">
       <HeaderLink href="/blog">Blog</HeaderLink>
       <HeaderLink href="/project">Projects</HeaderLink>
-      <HeaderLink href="/cookbook">CookBook</HeaderLink>
     </nav>
   </div>
   <div class="space-x-2 flex flex-row">
-    <HeaderLink href="/card">Contact</HeaderLink>
-    <HeaderLink href="/feed.rss"><Icon class="w-8" pack="ph" name="rss"/></HeaderLink>
-    <HeaderLink href="https://github.com/wkaisertexas" target="_blank"><Icon class="w-8" pack="cib" name="github"/></HeaderLink>
+    <HeaderLink href="mailto:wkaisertexas@gmail.com">Contact</HeaderLink>
+    <HeaderLink href="/feed.rss"><Icon class="w-6 md:w-8" pack="ph" name="rss"/></HeaderLink>
+    <HeaderLink href={LINKEDIN} target="_blank"><Icon class="w-6 md:w-8" pack="cib" name="linkedin"/></HeaderLink>
+    <HeaderLink href={GITHUB} target="_blank"><Icon class="w-6 md:w-8" pack="cib" name="github"/></HeaderLink>
   </div>
 </header>
