--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -1,70 +1,81 @@
 ---
-import BaseHead from '../../components/BaseHead.astro';
-import Header from '../../components/Header.astro';
-import Footer from '../../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
-import { getCollection } from 'astro:content';
+import BaseHead from "../../components/BaseHead.astro";
+import Header from "../../components/Header.astro";
+import Footer from "../../components/Footer.astro";
+import { SITE_TITLE, PROJECTS_DESCRIPTION } from "../../consts";
+import "../../styles/global.css";
 
-import { Icon } from 'astro-icon'
+import { getCollection } from "astro:content";
+import { Icon } from "astro-icon";
 
-const projects = (await getCollection('project')); // .sort()
+const projects = (await getCollection("project")).filter(
+  (project) => project.data.display !== false
+);
 ---
 
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
-    <BaseHead title={`${SITE_TITLE} | Projects`} description="A list of projects I've worked on."/>
+    <BaseHead
+      title={`${SITE_TITLE} | Projects`}
+      description={PROJECTS_DESCRIPTION}
+    />
   </head>
-  <body class="grid w-screen lg:grid-cols-5 md:grid-cols-3">
-		<main class="col-span-3 lg:col-start-2">
-    <Header/>
+  <body class="std-body">
+    <main class="std-main">
+      <Header />
 
-    <h1 class="text-lg font-bold">Projects</h1>
+      <section class="grid lg:grid-cols-3 grid-cols-1">
+        <h1 class="text-lg font-bold col-span-3">Projects</h1>
+        <p class="col-span-2">
+          Building projects in my spare time is a long-standing hobby of mine.
+          Education through project-based learning is my preffered way to learn.
+        </p>
+      </section>
 
-    <p>Building projects in my spare time is a long-standing hobby of mine. Education through projects is my prefered way to learn.</p>
+      <section>
+        <ul class="grid md:grid-cols-3 sm:grid-cols-2 space-y-4">
+          {
+            projects.map((project) => (
+              <li class="m-2 p-2 border-2 border-black hover:shadow-xl hover:border-emerald-600 rounded-md shadow-md hover:translate-x-1 ">
+                <a href={`/project/${project.slug}`}>
+                  <div>
+                    <header>
+                      <div class="flex flex-row justify-between">
+                        <Icon class="w-8" pack="ion" name="folder-outline" />
 
-    <section>
-      <ul class="grid md:grid-cols-3 sm:grid-cols-2 space-y-4">
-      {
-        projects.map((project) => (
-          <li>
-            <div>
-              <header>
-                <div class="flex flex-row justify-between">
-                  <Icon class="w-8" pack="ion" name="folder-outline" />
+                        <ul class="flex flex-row space-x-2 underline">
+                          {project.data.website && (
+                            <li>
+                              <a target="_blank" href={project.data.website}>
+                                <Icon class="w-8" pack="mdi" name="web" />
+                              </a>
+                            </li>
+                          )}
 
-                  <ul class="flex flex-row space-x-2 underline">
-                  {
-                    project.data.website && ( <li>
-                      <a target="_blank" href={project.data.website}>
-                        <Icon class="w-8" pack="mdi" name="web" />
-                      </a>
-                    </li>)
-                  }
+                          {project.data.repository && (
+                            <li>
+                              <a target="_blank" href={project.data.repository}>
+                                <Icon class="w-8" pack="cib" name="github" />
+                              </a>
+                            </li>
+                          )}
+                        </ul>
+                      </div>
+                    </header>
 
-                  {
-                    project.data.repository && (<li>
-                      <a target="_blank" href={project.data.repository}>
-                        <Icon class="w-8" pack="cib" name="github" />
-                      </a>
-                    </li>)
-                  }
-                </ul>
-              </div>
-            </header>
+                    <h2 class="font-bold text-md">{project.data.title}</h2>
+                    <p class="text-sm">{project.data.description}</p>
 
-              <h2 class="font-bold text-md">{project.data.title}</h2>
-              <p class="text-sm">{project.data.description}</p>
-
-              <p>{project.data.builtWith.join(", ")}</p>
-            </div>
-          </li>
-        ))
-      }
-      </ul>
-    </section>
-    <Footer/>
+                    <p class="mt-4 mb-2">{project.data.builtWith.join(", ")}</p>
+                  </div>
+                </a>
+              </li>
+            ))
+          }
+        </ul>
+      </section>
+      <Footer />
     </main>
-	</body>
+  </body>
 </html>
