--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,17 @@
 ---
+import { Icon } from "astro-icon";
+import { EMAIL, LINKEDIN, INSTAGRAM } from "../consts";
+
 const today = new Date();
 ---
 
-<footer class="text-center">
-	&copy; {today.getFullYear()} William Kaiser. All rights reserved.
+<footer class="md:flex justify-between py-4">
+  <p>&copy; {today.getFullYear()} William Kaiser. All rights reserved.</p>
+  
+  <ul class="flex md:flex-row space-x-2">
+    <li><a aria-label="Subscribe to my RSS feed" href="/feed.rss" target="_blank"><Icon class="w-6" pack="ph" name="rss"/></a></li>
+    <li><a aria-label="Send me an email" href={`mailto:${EMAIL}`} target="_blank"><Icon class="w-6" pack="charm" name="mail"/></a></li>
+    <li><a aria-label="Personal Instagram" href={INSTAGRAM} target="_blank"><Icon class="w-6" pack="cib" name="instagram"/></a></li>
+    <li><a aria-label="Professional LinkedIN" href={LINKEDIN} target="_blank"><Icon class="w-6" pack="cib" name="linkedin"/></a></li>
+  </ul>
 </footer>
