--- a/src/components/Item.astro
+++ b/src/components/Item.astro
@@ -12,7 +12,7 @@ const { title, description, src, href } = Astro.props;
 ---
 { href ?
 <a href={href} class="flex flex-row space-x-6">
-  <Image src={src} alt={title} width={108} height={108} format="avif" />
+  <Image class="h-24 w-24" {src} alt={title} width={256} height={256} format="avif" />
   <div>
     <h3 class="font-bold text-xl">{title}</h3>
     <p>{description}</p>
@@ -20,7 +20,7 @@ const { title, description, src, href } = Astro.props;
 </a>
 :
 <li class="flex flex-row space-x-6">
-  <Image src={src} alt={title} width={108} height={108} format="avif" />
+  <Image src={src} alt={title} width={256} height={256} format="avif" />
   <div>
     <h3 class="font-bold text-xl">{title}</h3>
     <p>{description}</p>
