fixing GA the wrong way

--- a/src/components/GoogleAnalytics.astro
+++ b/src/components/GoogleAnalytics.astro
@@ -14,3 +14,13 @@ import { GOOGLE_ANALYTICS_ID } from "../consts";
 	gtag("js", new Date());
 	gtag("config", GOOGLE_ANALYTICS_ID);
 </script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XKDGVM797T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XKDGVM797T');
+</script>
