minor blog and projects fixes

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -28,10 +28,10 @@ const posts = (await getCollection('blog'))
 	<body class="std-body">
 		<main class="std-main">
       <Header />
-      <div class="grid md:grid-cols-4">
+      <section class="grid md:grid-cols-4">
         <h1 class="text-4xl py-4 font-bold">Blog</h1>
         <p class="text-lg pb-4 pr-4 row-start-2 col-span-2">A collection of my thoughts and ramblings. More ramblings than I would like to admit.</p>
-      </div>
+      </section>
 
       <hr class="my-8 mb-16" />
 
