--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -25,16 +25,18 @@ const projects = (await getCollection("project")).filter(
     <main class="std-main">
       <Header />
 
-      <section class="grid lg:grid-cols-3 grid-cols-1">
-        <h1 class="text-lg font-bold col-span-3">Projects</h1>
-        <p class="col-span-2">
+      <section class="grid md:grid-cols-4">
+        <h1 class="text-4xl py-4 font-bold">Projects</h1>
+        <p class="text-lg pb-4 pr-4 row-start-2 col-span-2">
           Building projects in my spare time is a long-standing hobby of mine.
           Education through project-based learning is my preffered way to learn.
         </p>
       </section>
 
+      <hr class="my-8 mb-16" />
+
       <section>
-        <ul class="grid md:grid-cols-3 sm:grid-cols-2 space-y-4">
+        <ul class="grid md:grid-cols-2 sm:grid-cols-2 space-y-4">
           {
             projects.map((project) => (
               <li class="m-2 p-2 border-2 border-black hover:shadow-xl hover:border-emerald-600 rounded-md shadow-md hover:translate-x-1 ">
