--- a/src/components/GoogleAnalytics.astro
+++ b/src/components/GoogleAnalytics.astro
@@ -2,7 +2,7 @@
 import { GOOGLE_ANALYTICS_ID } from "../consts";
 ---
 
-<script
+<!-- <script
   type="text/partytown"
   src=`https://www.googletagmanager.com/gtag/js?id=${GOOGLE_ANALYTICS_ID}`
 ></script>
@@ -13,7 +13,7 @@ import { GOOGLE_ANALYTICS_ID } from "../consts";
 	}
 	gtag("js", new Date());
 	gtag("config", GOOGLE_ANALYTICS_ID);
-</script>
+</script> -->
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XKDGVM797T"></script>
