--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -27,7 +27,7 @@ const { title, description, pubDate, updatedDate, heroImage, next, prev } =
     <main class="std-main">
       <Header />
       <article class="prose lg:prose-xl 2xl:prose-2xl">
-        {heroImage && <Image class="rounded-md shadow-xl" width={1020} aspectRatio={16/9} src={heroImage} alt="header image" format="avif" />}
+        {heroImage && <Image class="rounded-md shadow-xl" width={1320} height={2} src={heroImage} alt="header image" format="avif" />}
         <h1 class="title">{title}</h1>
         <FormattedDate date={pubDate} />
         {
